[package]
name = "csv_processor_duckdb"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.1"
deunicode = "1.6.2"
env_logger = "0.11.3"
indicatif = "0.17.8"
lazy_static = "1.5.0"
log = "0.4.21"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
